--- a/package.json
+++ b/package.json
@@ -35,46 +35,56 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.6.8",
-    "@tarojs/helper": "3.6.8",
-    "@tarojs/plugin-platform-weapp": "3.6.8",
-    "@tarojs/plugin-platform-alipay": "3.6.8",
-    "@tarojs/plugin-platform-tt": "3.6.8",
-    "@tarojs/plugin-platform-swan": "3.6.8",
-    "@tarojs/plugin-platform-jd": "3.6.8",
-    "@tarojs/plugin-platform-qq": "3.6.8",
-    "@tarojs/plugin-platform-h5": "3.6.8",
-    "@tarojs/runtime": "3.6.8",
-    "@tarojs/shared": "3.6.8",
-    "@tarojs/taro": "3.6.8",
-    "@tarojs/plugin-framework-react": "3.6.8",
-    "@tarojs/react": "3.6.8",
-    "react-dom": "^18.0.0",
-    "react": "^18.0.0"
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/runtime": "^7.26.9",
+    "@nutui/icons-react-taro": "^3.0.0",
+    "@nutui/nutui-react-taro": "^3.0.0",
+    "@tarojs/components": "4.0.9",
+    "@tarojs/helper": "4.0.9",
+    "@tarojs/plugin-platform-alipay": "4.0.9",
+    "@tarojs/plugin-platform-h5": "4.0.9",
+    "@tarojs/plugin-platform-jd": "4.0.9",
+    "@tarojs/plugin-platform-qq": "4.0.9",
+    "@tarojs/plugin-platform-swan": "4.0.9",
+    "@tarojs/plugin-platform-tt": "4.0.9",
+    "@tarojs/react": "4.0.9",
+    "@tarojs/runtime": "4.0.9",
+    "@tarojs/shared": "4.0.9",
+    "@tarojs/taro": "4.0.9",
+    "ahooks": "^3.8.4",
+    "mini-program-iconfont-cli": "^0.6.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.6.8",
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^18.0.0",
-    "webpack": "5.78.0",
-    "@tarojs/taro-loader": "3.6.8",
-    "@tarojs/webpack5-runner": "3.6.8",
-    "babel-preset-taro": "3.6.8",
-    "eslint-config-taro": "3.6.8",
-    "eslint": "^8.12.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@tarojs/cli": "4.0.9",
+    "@tarojs/plugin-framework-react": "4.0.9",
+    "@tarojs/plugin-platform-weapp": "4.0.9",
+    "@tarojs/taro-loader": "4.0.9",
+    "@tarojs/webpack5-prebundle": "4.0.9",
+    "@tarojs/webpack5-runner": "4.0.9",
+    "@types/node": "^18.19.78",
+    "@types/react": "^18.3.18",
+    "@types/webpack-env": "^1.18.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "babel-loader": "^10.0.0",
+    "babel-preset-taro": "4.0.9",
+    "eslint": "^8.57.1",
+    "eslint-config-taro": "4.0.9",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "postcss": "^8.5.3",
     "react-refresh": "^0.11.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "^14.4.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0",
-    "postcss": "^8.4.18",
-    "ts-node": "^10.9.1",
-    "@types/node": "^18.15.11"
+    "stylelint": "^14.16.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
+    "webpack": "5.76.0"
   }
 }
