--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,8 @@
     "jsx": "react-jsx",
     "allowJs": true,
     "resolveJsonModule": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": ["./src", "./types"],
+  "include": ["./src", "src/types"],
   "compileOnSave": false
 }
