--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@tarojs/taro": "4.0.9",
     "ahooks": "^3.8.4",
     "mini-program-iconfont-cli": "^0.6.1",
+    "miniprogram-ci": "^2.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0"
