--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "miniprogram-ci": "^2.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "text-encoding-polyfill": "^0.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
